--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "next": "15.3.3",
     "react": "^19.0.0",
